--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 /* 1. Base */
 
 html {
-  background-color: #5f45bb;
-  background-image: linear-gradient(to bottom right, #180cac, #d054e4);
+  background-color: #2b2c2d;
+  /*background-image: linear-gradient(to bottom right, #1551ac, #30bee4);*/
   color: #fff;
   font-family: "Quicksand", sans-serif;
   font-size: 16px;
@@ -49,7 +49,7 @@ a {
 /* 3. Specific */
 
 .wallpaper {
-  background-image: url("../images/austria.jpg");
+  background-image: url("../images/background.jpg");
   background-position: center;
   background-size: cover;
   opacity: 0.2;
@@ -59,7 +59,12 @@ a {
 .content {
   display: flex;
   position: relative;
-  min-height: 100vh;
+  min-height: 50vh;
+}
+.activities{
+  display: flex;
+  position: relative;
+
 }
 
 .side {
@@ -86,13 +91,16 @@ a {
 }
 
 .about {
-  max-width: 26rem;
+  max-width: 50rem;
 }
 
 .name {
   font-size: 2.25rem;
   line-height: 1.125;
   margin-bottom: 0.5rem;
+}
+.space{
+  padding: 15px;
 }
 
 .job {
@@ -182,6 +190,14 @@ a {
   transform: scale(1.1);
 }
 
+.experience{
+  margin-top: 4em;
+}
+
+.activities{
+  margin-top: 3em;
+}
+
 /* 4. Responsiveness */
 
 @media screen and (max-width: 799px) {
@@ -200,6 +216,12 @@ a {
 
 @media screen and (min-width: 800px) {
   .content {
+    align-items: center;
+    justify-content: space-around;
+    justify-content: space-evenly;
+    padding: 4rem;
+  }
+  .activities{
     align-items: center;
     justify-content: space-around;
     justify-content: space-evenly;
